--- a/styles/custom/notion.scss
+++ b/styles/custom/notion.scss
@@ -1,7 +1,7 @@
 // 스크롤 스타일 제거
-::-webkit-scrollbar {
-  display: none;
-}
+// ::-webkit-scrollbar {
+//   display: none;
+// }
 
 // 반응형 처리
 @media only screen and (max-width: 1500px) {
